--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Minor improvements on the SVG file exported by draw.io",
   "main": "main.ts",
   "scripts": {
-    "main": "./node_modules/.bin/ts-node main.ts"
+    "main": "./node_modules/.bin/ts-node main.ts -o nami.svg -v test.svg"
   },
   "author": "Ivan Herman <ivan@w3.org> (https://www.w3.org/People/Ivan/)",
   "license": "W3C-20150513",
@@ -16,6 +16,7 @@
     "@typescript-eslint/parser": "^6.4.1",
     "commander": "^11.0.0",
     "eslint": "^8.47.0",
+    "svgo": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
     "xmldom": "^0.6.0"
